// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconBase> that renders an SVG wrapper with all options included should apply height only to styles if size is provided with preserveAspectRatio 1`] = `
<div>
  <div
    class="IconBase"
  >
    <svg
      class="IconBase__svg"
      role="img"
      style="width: auto; height: 48px;"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconBase> that renders an SVG wrapper with all options included should apply proportional styles if size is provided 1`] = `
<div>
  <div
    class="IconBase"
  >
    <svg
      class="IconBase__svg"
      role="img"
      style="width: 48px; height: 48px;"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconBase> that renders an SVG wrapper with all options included should correct negative sizes 1`] = `
<div>
  <div
    class="IconBase"
  >
    <svg
      class="IconBase__svg"
      role="img"
      style="width: 0px; height: 0px;"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconBase> that renders an SVG wrapper with all options included should not apply proportional styles if no size provided 1`] = `
<div>
  <div
    class="IconBase"
  >
    <svg
      class="IconBase__svg"
      role="img"
      style="width: 1em;"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconBase> that renders an SVG wrapper with all options included should render a default icon 1`] = `
<div>
  <div
    class="IconBase IconBase--margin_right IconBase--isPrimary"
  >
    <svg
      aria-labelledby="title"
      class="IconBase__svg"
      role="img"
      style="width: 15px; height: 15px;"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Icon base
      </title>
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
</div>
`;
